--- a/roles/maw_backup/tasks/main.yml
+++ b/roles/maw_backup/tasks/main.yml
@@ -94,3 +94,12 @@
     podman_vol_bu__control_dir: "{{ maw_prod_wwwdp_bu__control_dir }}"
     podman_vol_bu__temp_remote_dir: "{{ maw_prod_wwwdp_bu__temp_remote_dir }}"
   when: maw__do_dataprotection_backup
+
+- name: backup reverse geocode volume
+  ansible.builtin.include_role:
+    name: podman_backup_volume
+  vars:
+    podman_vol_bu__volume: "{{ maw_prod_revgeo_bu__volume }}"
+    podman_vol_bu__control_dir: "{{ maw_prod_revgeo_bu__control_dir }}"
+    podman_vol_bu__temp_remote_dir: "{{ maw_prod_revgeo_bu__temp_remote_dir }}"
+  when: maw__do_revgeo_backup
