--- a/vars/maw_test.yml
+++ b/vars/maw_test.yml
@@ -97,6 +97,7 @@ maw_gateway__image: localhost/maw-gateway-test
 # maw reverse geocode
 maw_revgeo__configure_job: false
 maw_revgeo__image:
+maw_revgeo__restore: false
 
 # maw certs
 maw_certs__image: localhost/maw-certs-test
