updates to get this close to running in dev

--- a/roles/maw_gateway/tasks/main.yml
+++ b/roles/maw_gateway/tasks/main.yml
@@ -1,95 +1,7 @@
 ---
-- name: ensure we have latest images for mikeandwan.us
-  containers.podman.podman_image:
-    name: "{{ item }}"
-  loop:
-    - "{{ maw_gateway__image }}"
-    - "{{ maw_gateway__certbot_image }}"
-  when: item | length > 0
+- name: configure gateway container
+  ansible.builtin.include_tasks:
+    file: container_hosted.yml
+  when: maw_gateway__run_in_container
 
-- name: define common volumes for gateway
-  ansible.builtin.set_fact:
-    _maw_gateway__volumes:
-      - "{{ maw_gateway__cert_volume }}:/certs:ro,z"
-      - "{{ maw_gateway__asset_dir }}:/assets:ro"
-
-- name: certbot related tasks
-  block:
-    - name: create maw-certbot-certs volume
-      containers.podman.podman_volume:
-        name: "{{ maw_gateway__certbot_certs_volume }}"
-        state: present
-      register: _maw_gateway__certbot_certs_volume
-
-    - name: create maw-certbot-validation volume
-      containers.podman.podman_volume:
-        name: "{{ maw_gateway__certbot_validation_volume }}"
-        state: present
-      register: _maw_gateway__certbot_validation_volume
-
-    - name: restore certbot certs
-      ansible.builtin.include_role:
-        name: podman_restore_volume
-      when: >
-        _maw_gateway__certbot_certs_volume.changed
-        and
-        maw_gateway__configure_certbot
-      vars:
-        pod_vol_re__temp_remote_dir: "{{ maw_gateway__temp_dir }}"
-        pod_vol_re__control_dir: "{{ maw_gateway__certbot_certs_controller_backup_dir }}"
-        pod_vol_re__volume: "{{ maw_gateway__certbot_certs_volume }}"
-
-    - name: restore certbot validation
-      ansible.builtin.include_role:
-        name: podman_restore_volume
-      when: >
-        _maw_gateway__certbot_validation_volume.changed
-        and
-        maw_gateway__configure_certbot
-      vars:
-        pod_vol_re__temp_remote_dir: "{{ maw_gateway__temp_dir }}"
-        pod_vol_re__control_dir: "{{ maw_gateway__certbot_validation_controller_backup_dir }}"
-        pod_vol_re__volume: "{{ maw_gateway__certbot_validation_volume }}"
-
-    - name: define prod only volumes for gateway (letsencrypt)
-      ansible.builtin.set_fact:
-        _maw_gateway__volumes_prod:
-          - "{{ maw_gateway__certbot_validation_volume }}:/var/www/certbot:ro,z"
-          - "{{ maw_gateway__certbot_certs_volume }}:/etc/letsencrypt:ro,z"
-
-    - name: merge all volumes needed for gateway
-      ansible.builtin.set_fact:
-        _maw_gateway__volumes: "{{ _maw_gateway__volumes + _maw_gateway__volumes_prod }}"
-
-    - name: Configure Certbot Renew
-      ansible.builtin.include_role:
-        name: certbot_renew
-      vars:
-        cb__systemd_dir: "{{ maw_gateway__certbot_systemd_dir }}"
-        cb__service_name: "{{ maw_gateway__certbot_service }}"
-        cb__start_job: true
-        cb__enable_job: true
-        cb__calendar: "{{ maw_gateway__certbot_calendar }}"
-        cb__pod: "{{ maw_gateway__pod }}"
-        cb__container_image: "{{ maw_gateway__certbot_image }}"
-        cb__validation_volume: "{{ maw_gateway__certbot_validation_volume }}"
-        cb__certs_volume: "{{ maw_gateway__certbot_certs_volume }}"
-  when: maw_gateway__certbot_certs_volume | length > 0
-
-- name: maw-gateway container
-  containers.podman.podman_container:
-    name: "{{ maw_gateway__container }}"
-    pod: "{{ maw_gateway__pod }}"
-    image: "{{ maw_gateway__image }}"
-    state: started
-    volume: "{{ _maw_gateway__volumes }}"
-    security_opt:
-      - label=disable
-    label:
-      io.containers.autoupdate: image
-
-- name: wait for gateway container
-  ansible.builtin.include_role:
-    name: podman_wait_for_start
-  vars:
-    pod_start__container_name: "{{ maw_gateway__container }}"
+# currently nothing else to do if it is 'native hosted' / doesn't run in container
