--- a/roles/maw/tasks/main.yml
+++ b/roles/maw/tasks/main.yml
@@ -1,78 +1,78 @@
 ---
-# - name: Prepare self signed / internal certs
-#   ansible.builtin.include_role:
-#     name: maw_certs
+- name: Prepare self signed / internal certs
+  ansible.builtin.include_role:
+    name: maw_certs
 
-# - name: Initialize maw_pod
-#   ansible.builtin.include_role:
-#     name: maw_pod
-#   vars:
-#     maw_pod__mode: setup
+- name: Initialize maw_pod
+  ansible.builtin.include_role:
+    name: maw_pod
+  vars:
+    maw_pod__mode: setup
 
-# - name: Setup shared google creds volume
-#   ansible.builtin.include_role:
-#     name: maw_google_credentials
+- name: Setup shared google creds volume
+  ansible.builtin.include_role:
+    name: maw_google_credentials
 
-# - name: Setup postgres container
-#   ansible.builtin.include_role:
-#     name: maw_postgres
+- name: Setup postgres container
+  ansible.builtin.include_role:
+    name: maw_postgres
 
-# - name: Configure redis
-#   ansible.builtin.include_role:
-#     name: maw_redis
+- name: Configure redis
+  ansible.builtin.include_role:
+    name: maw_redis
 
-# - name: Configure solr
-#   ansible.builtin.include_role:
-#     name: maw_solr
+- name: Configure solr
+  ansible.builtin.include_role:
+    name: maw_solr
 
-# - name: Configure Solr Indexer
-#   ansible.builtin.include_role:
-#     name: maw_solr_indexer
+- name: Configure Solr Indexer
+  ansible.builtin.include_role:
+    name: maw_solr_indexer
 
-# # REMINDER: our current db needs a couple scripts applied for the indexer to succeed.  make sure to run
-# #           the 014 and 015 scripts if this fails, and then try again.
-# - name: Run Solr Indexer
-#   ansible.builtin.systemd:
-#     name: "{{ maw_solridx__service }}"
-#     enabled: false
-#     state: started
-#     scope: user
+# REMINDER: our current db needs a couple scripts applied for the indexer to succeed.  make sure to run
+#           the 014 and 015 scripts if this fails, and then try again.
+- name: Run Solr Indexer
+  ansible.builtin.systemd:
+    name: "{{ maw_solridx__service }}"
+    enabled: false
+    state: started
+    scope: user
 
-# - name: Configure maw_auth
-#   ansible.builtin.include_role:
-#     name: maw_auth
-#   vars:
-#     maw_auth__pfx_pwd: "{{ maw__pfx_pwd_auth }}"
+- name: Configure maw_auth
+  ansible.builtin.include_role:
+    name: maw_auth
+  vars:
+    maw_auth__pfx_pwd: "{{ maw__pfx_pwd_auth }}"
 
-# - name: Configure maw_api
-#   ansible.builtin.include_role:
-#     name: maw_api
-#   vars:
-#     maw_api__pfx_pwd: "{{ maw__pfx_pwd_api }}"
+- name: Configure maw_api
+  ansible.builtin.include_role:
+    name: maw_api
+  vars:
+    maw_api__pfx_pwd: "{{ maw__pfx_pwd_api }}"
 
-# - name: Configure maw_www
-#   ansible.builtin.include_role:
-#     name: maw_www
-#   vars:
-#     maw_www__pfx_pwd: "{{ maw__pfx_pwd_www }}"
+- name: Configure maw_www
+  ansible.builtin.include_role:
+    name: maw_www
+  vars:
+    maw_www__pfx_pwd: "{{ maw__pfx_pwd_www }}"
 
-# - name: Configure maw_files
-#   ansible.builtin.include_role:
-#     name: maw_files
+- name: Configure maw_files
+  ansible.builtin.include_role:
+    name: maw_files
 
-# - name: Configure maw_photos
-#   ansible.builtin.include_role:
-#     name: maw_photos
+- name: Configure maw_photos
+  ansible.builtin.include_role:
+    name: maw_photos
 
-# - name: Configure maw_gateway
-#   ansible.builtin.include_role:
-#     name: maw_gateway
+- name: Configure maw_gateway
+  ansible.builtin.include_role:
+    name: maw_gateway
 
-# - name: Finalize maw_pod as a systemd service
-#   ansible.builtin.include_role:
-#     name: maw_pod
-#   vars:
-#     maw_pod__mode: systemd
+- name: Finalize maw_pod as a systemd service
+  ansible.builtin.include_role:
+    name: maw_pod
+  vars:
+    maw_pod__mode: systemd
 
 - name: Configure Reverse Geocode service
   ansible.builtin.include_role:
