--- a/roles/maw_photos/tasks/main.yml
+++ b/roles/maw_photos/tasks/main.yml
@@ -1,21 +1,7 @@
 ---
-- name: pull image
-  containers.podman.podman_image:
-    name: "{{ maw_photos__image }}"
+- name: configure photos container
+  ansible.builtin.include_tasks:
+    file: container_hosted.yml
+  when: maw_photos__run_in_container
 
-- name: maw-photos container
-  containers.podman.podman_container:
-    name: "{{ maw_photos__container }}"
-    pod: "{{ maw_photos__pod }}"
-    image: "{{ maw_photos__image }}"
-    state: started
-    volume:
-      - "{{ maw_photos__cert_volume }}:/certs:ro,z"
-    label:
-      io.containers.autoupdate: image
-
-- name: wait for photos container
-  ansible.builtin.include_role:
-    name: podman_wait_for_start
-  vars:
-    pod_start__container_name: "{{ maw_photos__container }}"
+# currently nothing else to do if it is 'native hosted' / doesn't run in container
