--- a/roles/maw_reverse_geocoder/tasks/main.yml
+++ b/roles/maw_reverse_geocoder/tasks/main.yml
@@ -1,41 +1,44 @@
 ---
-- name: pull reverse geocode image
-  containers.podman.podman_image:
-    name: "{{ maw_revgeo__image }}"
+- name: configure reverse geocode job if requested
+  block:
+    - name: pull reverse geocode image
+      containers.podman.podman_image:
+        name: "{{ maw_revgeo__image }}"
 
-- name: prepare reverse geocode environment file
-  ansible.builtin.include_role:
-    name: maw_envfile
-  vars:
-    maw_env__template: maw-reverse-geocode.env.j2
-    maw_env__path: "{{ maw_revgeo__envfile }}"
-    maw_env__backup: "{{ maw_revgeo__envfile_backup }}"
+    - name: prepare reverse geocode environment file
+      ansible.builtin.include_role:
+        name: maw_envfile
+      vars:
+        maw_env__template: maw-reverse-geocode.env.j2
+        maw_env__path: "{{ maw_revgeo__envfile }}"
+        maw_env__backup: "{{ maw_revgeo__envfile_backup }}"
 
-- name: create maw-reverse-geocode volume
-  containers.podman.podman_volume:
-    name: "{{ maw_revgeo__volume }}"
-    state: present
-  register: _maw_revgeo__volume_result
+    - name: create maw-reverse-geocode volume
+      containers.podman.podman_volume:
+        name: "{{ maw_revgeo__volume }}"
+        state: present
+      register: _maw_revgeo__volume_result
 
-- name: restore reverse geocode files
-  ansible.builtin.include_role:
-    name: podman_restore_volume
-  when: >
-    _maw_revgeo__volume_result.changed
-    and
-    maw_revgeo__restore
-  vars:
-    pod_vol_re__temp_remote_dir: "{{ maw_revgeo__temp_dir }}"
-    pod_vol_re__control_dir: "{{ maw_revgeo__controller_backup_dir }}"
-    pod_vol_re__volume: "{{ maw_revgeo__volume }}"
+    - name: restore reverse geocode files
+      ansible.builtin.include_role:
+        name: podman_restore_volume
+      when: >
+        _maw_revgeo__volume_result.changed
+        and
+        maw_revgeo__restore
+      vars:
+        pod_vol_re__temp_remote_dir: "{{ maw_revgeo__temp_dir }}"
+        pod_vol_re__control_dir: "{{ maw_revgeo__controller_backup_dir }}"
+        pod_vol_re__volume: "{{ maw_revgeo__volume }}"
 
-- name: Set facts for systemd_job role
-  ansible.builtin.set_fact:
-    sysd_job__service_template: "{{ role_path }}/templates/reverse-geocode.service.j2"
-    sysd_job__timer_template: "{{ role_path }}/templates/reverse-geocode.timer.j2"
-    sysd_job__systemd_dir: "{{ maw_revgeo__systemd_dir }}"
-    sysd_job__service: "{{ maw_revgeo__service }}"
+    - name: Set facts for systemd_job role
+      ansible.builtin.set_fact:
+        sysd_job__service_template: "{{ role_path }}/templates/reverse-geocode.service.j2"
+        sysd_job__timer_template: "{{ role_path }}/templates/reverse-geocode.timer.j2"
+        sysd_job__systemd_dir: "{{ maw_revgeo__systemd_dir }}"
+        sysd_job__service: "{{ maw_revgeo__service }}"
 
-- name: Configure systemd job to run the reverse geocoder
-  ansible.builtin.include_role:
-    name: systemd_job
+    - name: Configure systemd job to run the reverse geocoder
+      ansible.builtin.include_role:
+        name: systemd_job
+  when: maw_revgeo__configure_job
