--- a/vars/maw_vars.yml
+++ b/vars/maw_vars.yml
@@ -357,3 +357,4 @@ maw_as__cache_sync_image: "{{ maw_redis__cache_sync_image }}"
 maw_as__maw_certs_image: "{{ maw_certs__image }}"
 maw_as__reverse_geocode_image: "{{ maw_revgeo__image }}"
 maw_as__solr_indexer: "{{ maw_solridx__image }}"
+maw_as__asset_image_dir: "{{ maw__asset_dir_images }}"
