--- a/roles/maw_www/meta/argument_specs.yml
+++ b/roles/maw_www/meta/argument_specs.yml
@@ -108,6 +108,16 @@ argument_specs:
         required: true
         description: The google recaptcha secret
 
+      maw_www__cloudflare_turnstile_site_key:
+        type: str
+        required: true
+        description: The cloudflare turnstile site key
+
+      maw_www__cloudflare_turnstile_secret_key:
+        type: str
+        required: true
+        description: The cloudflare turnstile secret
+
       maw_www__asset_dir_images:
         type: str
         required: true
