--- a/vars/maw_vars.yml
+++ b/vars/maw_vars.yml
@@ -360,3 +360,4 @@ maw_as__maw_certs_image: "{{ maw_certs__image }}"
 maw_as__reverse_geocode_image: "{{ maw_revgeo__image }}"
 maw_as__solr_indexer: "{{ maw_solridx__image }}"
 maw_as__asset_image_dir: "{{ maw__asset_dir_images }}"
+maw_as__redis_container: "{{ maw_redis__container }}"
