--- a/vars/maw_dev.yml
+++ b/vars/maw_dev.yml
@@ -101,7 +101,7 @@ maw_revgeo__image:
 maw_revgeo__restore: false
 
 # maw certs
-maw_certs__image: localhost/maw-certs-test
+maw_certs__image: localhost/maw-certs-dev
 maw_certs__fqdn_prefix: "{{ maw__env }}"
 maw_certs__register_ca: true
 maw_certs__restore: false
